[package]
name = "json-ipc-server"
version = "0.2.2"
authors = ["Nikolay Volf <nikvolf@gmail.com>"]

[dependencies]
jsonrpc-core = { git = "https://github.com/ethcore/jsonrpc-core.git" }
mio = "0.5"
slab   = "0.1.0"
bytes  = "0.3.0"
miow = "0.1"
log = "0.3"
env_logger = "0.3"
lazy_static = "0.1"

[dev-dependencies]
rand = "0.3"